--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Portfolio+</a>
+        <div class="container">
+            <!-- Center-aligned Portfolio+ icon -->
+            <div class="mx-auto">
+                <a class="navbar-brand" href="#">Portfolio+</a>
+            </div>
+        </div>
     </nav>
+
     <!-- Flash message block -->
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
@@ -25,6 +31,7 @@
         </div>
       {% endif %}
     {% endwith %}
+
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -57,4 +64,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
