--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Portfolio+</a>
+        <div class="container">
+            <!-- Center-aligned Portfolio+ icon -->
+            <div class="mx-auto">
+                <a class="navbar-brand" href="/">Portfolio+</a>
+            </div>
+        </div>
     </nav>
 
     <div class="container mt-5">
