--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -72,11 +72,38 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <!-- Center-aligned Portfolio+ icon -->
-            <div class="mx-auto">
-                <a class="navbar-brand" href="/dashboard">Portfolio+</a>
-            </div>
+        <a class="navbar-brand" href="/dashboard">Portfolio+</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">
+                        <i class="fas fa-home"></i> Home
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/stocks">
+                        <i class="fas fa-chart-line"></i> Stocks
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/portfolio">
+                        <i class="fas fa-briefcase"></i> My Portfolio
+                    </a>
+                </li>
+            </ul>
+            <span class="navbar-text mr-4">
+                <i class="fas fa-wallet"></i> Balance: $10,000.00
+            </span>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
 
