Added Watchlist to dashboard navbar

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,6 +74,11 @@
                         <i class="fas fa-briefcase"></i> My Portfolio
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/watchlist">
+                        <i class="fas fa-glasses"></i> Watchlist
+                    </a>
+                </li>
             </ul>
             <span class="navbar-text mr-4">
                 <i class="fas fa-wallet"></i> Balance: $10,000.00
