--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -81,8 +81,9 @@
                 </li>
             </ul>
             <span class="navbar-text mr-4">
-                <i class="fas fa-wallet"></i> Balance: $10,000.00
+                <i class="fas fa-wallet"></i> Balance: ${{ "{:,.2f}".format(wallet_balance) }}
             </span>
+            
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">
@@ -102,11 +103,11 @@
                         <h5 class="mb-0"><i class="fas fa-user-circle"></i> Welcome, {{ username }}!</h5>
                     </div>
                     <div class="card-body">
-                        <div class="big-number mb-4">$10,000.00</div>
+                        <div class="big-number mb-4">${{ "{:,.2f}".format(wallet_balance) }}</div>
                         <div class="row">
                             <div class="col-12 mb-3">
                                 <p class="text-muted mb-1">Available Balance</p>
-                                <h5>$10,000.00</h5>
+                                <h5>${{ "{:,.2f}".format(wallet_balance) }}</h5>
                             </div>
                             <div class="col-12">
                                 <p class="text-muted mb-1">Invested Amount</p>
