--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -42,6 +42,7 @@
                     </a>
                 </li>
             </ul>
+            <span class="navbar-text mr-4"><i class="fas fa-wallet"></i> Balance: ${{ "{:,.2f}".format(wallet_balance) }}</span>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
