--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="/watchlist"><i class="fas fa-glasses"></i> Watchlist</a>
                 </li>
             </ul>
-            <span class="navbar-text mr-4"><i class="fas fa-wallet"></i> Balance: $10,000.00</span>
+            <span class="navbar-text mr-4"><i class="fas fa-wallet"></i> Balance: ${{ "{:,.2f}".format(wallet_balance) }}</span>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
