--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -99,9 +99,8 @@
                     </a>
                 </li>
             </ul>
-            <span class="navbar-text mr-4">
-                <i class="fas fa-wallet"></i> Balance: $10,000.00
-            </span>
+            <span class="navbar-text mr-4"><i class="fas fa-wallet"></i> Balance: ${{ "{:,.2f}".format(wallet_balance) }}</span>
+            
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">
