--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,6 +52,7 @@
         }
         .card-body {
             padding: 1rem;
+            height: calc(100% - 56px);
         }
         .time-selector {
             background-color: transparent;
@@ -84,7 +85,7 @@
             margin-top: 0.5rem;
         }
         #marketChart {
-            height: 380px;
+            height: 450px;
             width: 100%;
         }
         .card {
@@ -111,7 +112,7 @@
             margin-bottom: 0.5rem;
         }
         .market-movers-list {
-            max-height: 300px;
+            max-height: 160px;
             overflow-y: auto;
             margin-bottom: 20px;
             padding-right: 10px;
@@ -141,6 +142,7 @@
             align-items: center;
             padding: 15px;
             border-bottom: 1px solid #eee;
+            height: 80px;
         }
         
         .stock-info {
